<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <ImageView
        android:id="@+id/ivMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_signal" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/load_no_data"
        android:textColor="@color/mine_text_gray"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/check_your_network"
        android:textColor="@color/mine_text_gray"
        android:textSize="@dimen/text_size_18"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_register"
        android:gravity="center"
        android:text="@string/try_refresh"
        android:textColor="@drawable/btn_register_text_selector"
        android:textSize="@dimen/text_size_18" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

</LinearLayout>