<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_item_selector"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/game_icon_width"
            android:layout_height="@dimen/game_icon_width"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_game_meng" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/tv_giftName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/gift_name_default"
                android:textColor="@color/mine_text_black_333333"
                android:textSize="@dimen/text_size_16" />

            <LinearLayout
                android:id="@+id/ll_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residue"
                    android:lines="1"
                    android:textColor="@color/mine_text_gray_999999"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/tv_residueCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residue_detail"
                    android:lines="1"
                    android:textColor="@color/mine_text_orange_D8985D"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part"
                    android:lines="1"
                    android:textColor="@color/mine_text_gray_999999"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_take_"
                    android:lines="1"
                    android:textColor="@color/mine_text_gray_999999"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/tv_alreadyTakeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residue_detail"
                    android:lines="1"
                    android:textColor="@color/mine_text_gray_999999"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part"
                    android:lines="1"
                    android:textColor="@color/mine_text_gray_999999"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift_key"
                    android:lines="1"
                    android:textColor="@color/mine_text_gray_666666"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/tv_giftKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/gift_key_default"
                    android:textColor="@color/mine_text_orange_D8985D"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_gift_copy"
            android:clickable="true"
            android:gravity="center"
            android:lines="1"
            android:text="@string/copy_code"
            android:textColor="@drawable/btn_gift_copy_text_selector"
            android:textSize="@dimen/text_size_14" />
        
        <ImageView
            android:id="@+id/iv_select"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/cb_my_gift_unselected"
            android:visibility="gone"
             />
        
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/mine_user_info_line" />

</LinearLayout>