<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@color/mine_text_black_333333"
            android:textSize="@dimen/text_size_18"
            android:text="@string/choice_image_icon" />

        <Button
            android:id="@+id/btn_album"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_40"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_corner_white"
            android:textColor="@color/mine_text_gray_4D4D4D"
            android:textSize="@dimen/text_size_16"
            android:text="@string/album" />

        <Button
            android:id="@+id/btn_photograph"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_40"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_corner_white"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/mine_text_gray_4D4D4D"
            android:text="@string/photograph" />

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_40"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_corner_gray"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:text="@string/cancle" />
        
    </LinearLayout>

</RelativeLayout>