<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white"
    >
    
    <include layout="@layout/layout_head_title"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/mine_user_info_item_bg"
        android:gravity="center_vertical"
        >
        <ImageView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="@dimen/spacing_10"
            android:background="@drawable/icon_user"
            android:contentDescription="@string/app_name"
            />
        <View 
            android:layout_width="1px" 
            android:layout_height="match_parent" 
            android:background="@color/line_CCCCCC"
            android:layout_marginTop="@dimen/spacing_10" 
            android:layout_marginBottom="@dimen/spacing_10"/>
        <EditText 
            android:id="@+id/edt_userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_16"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/mine_text_black_333333"
            android:background="@color/white"
            android:hint="@string/mobile_email"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:layout_marginRight="30dp"
        android:background="@drawable/mine_user_info_item_bg"
        android:layout_marginTop="10dp"
        >
        <ImageView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="@dimen/spacing_10"
            android:background="@drawable/icon_lock"
            android:contentDescription="@string/app_name"
            />
        <View 
            android:layout_width="1px" 
            android:layout_height="match_parent" 
            android:background="@color/line_CCCCCC"
            android:layout_marginTop="@dimen/spacing_10" 
            android:layout_marginBottom="@dimen/spacing_10"/>
        <EditText 
            android:id="@+id/edt_userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/mine_text_black_333333"
            android:inputType="textPassword"
            android:hint="@string/user_password"
            android:background="@color/white"
            />
    </LinearLayout>
    
    <TextView 
        android:id="@+id/tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:clickable="true"
        android:textColor="@drawable/forget_password_text_selector"
        android:textSize="@dimen/text_size_16"
        android:text="@string/forget_password"
        />
    
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_45"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_logout"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        />
    
    <Button 
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_45"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/btn_register"
        android:text="@string/register"
        android:textColor="@drawable/btn_register_text_selector"
        android:textSize="@dimen/text_size_20"
        />
    
</LinearLayout>
